<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agent_cpp</name>
  <version>0.0.0</version>
  <description>Implements de logic of an Agent in the MAS.</description>
  <maintainer email="kfiter.exterieur@pacific.naval-group.com">Kerian Fiter</maintainer>
  <license>TODO: License declaration</license>
  <author email="kfiter.exterieur@pacific.naval-group.com">Kerian Fiter</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>liquidai_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>sdformat14</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>composition_interfaces</depend>
  <!-- <depend>nlohmann</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
