<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agent_demo_cpp</name>
  <version>0.0.0</version>
  <description>This package is used to demonstrate the capabilities of the MAS, notably scheduling</description>
  <maintainer email="kfiter.exterieur@pacific.naval-group.com">Kerian Fiter</maintainer>
  <license>TODO: License declaration</license>
  <author email="kfiter.exterieur@pacific.naval-group.com">Kerian Fiter</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>liquidai_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
